--- a/index.html
+++ b/index.html
@@ -48,20 +48,48 @@
             <div class="container">
             <ul class="section-two">
                 <li class="about style">
+                    <ul class="section-img">
+                        <li class="section-item">
+                                <svg class="section-two-item">
+                                    <use href="./img/section-2.svg#icon-antenna"></use>
+                                </svg>
+                        </li>
+                    </ul>   
                     <h3 class="text-top">Strategy</h3>
                     <p class="text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li class="about style">
+                    <ul class="section-img">
+                        <li class="section-item">
+                                <svg class="section-two-item">
+                                    <use href="./img/section-2.svg#icon-clock"></use>
+                                </svg>
+                        </li>
+                    </ul>   
                     <h3 class="text-top">Punctuality</h3>
                     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="about style">
+                    <ul class="section-img">
+                        <li class="section-item">
+                                <svg class="section-two-item">
+                                    <use href="./img/section-2.svg#icon-diagram"></use>
+                                </svg>
+                        </li>
+                    </ul>   
                     <h3 class="text-top">Diligence</h3>
                     <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
 
                 </li>
                 <li class="about style">
+                    <ul class="section-img">
+                        <li class="section-item">
+                                <svg class="section-two-item">
+                                    <use href="./img/section-2.svg#icon-astronaut"></use>
+                                </svg>
+                        </li>
+                    </ul>   
                     <h3 class="text-top">Technologies</h3>
                     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
