--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <button class="section-button">Order Service</button>
         </div>
         </section>
-        
+        <!--section 2-->
         <section class="section-two-about">
             <!-- <h2>section 2</h2> -->
             <div class="container">
@@ -276,7 +276,30 @@
 
 
         </section>
-
+        <!--customers-->
+        <section>
+            <h2 class="customers">Customers</h2>
+            <ul>
+                <li>
+                    <svg></svg>
+                </li>
+                <li>
+                    <svg></svg>
+                </li>
+                <li>
+                    <svg></svg>
+                </li>
+                <li>
+                    <svg></svg>
+                </li>
+                <li>
+                    <svg></svg>
+                </li>
+                <li>
+                    <svg></svg>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <footer class="logo">
