--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
 
         </section>
         <!--customers-->
-        <section>
-            <h2 class="customers">Customers</h2>
-            <ul>
-                <li>
+        <section class="customers">
+            <h2 class="customers-text">Customers</h2>
+            <ul class="customers-list">
+                <li class="customers-item">
                     <svg></svg>
                 </li>
                 <li>
