--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h2 class="team-title">Our Team</h2>
             <ul class="team">
                 <li class="style photo-team">
-                    <img width="264" height="260" src="./img/men1.jpg" alt="men">
+                    <img class="section-four-photo" width="264" height="260" src="./img/men1.jpg" alt="men">
                 <div class="photo-color">
                     <h3 class="team-text">Mark Guerrero</h3>
                     <p class="team-prof">Product Designer</p>
@@ -158,7 +158,7 @@
                 </li>
 
                 <li class="style photo-team">
-                    <img width="264" height="260" src="./img/men2.jpg" alt="men">
+                    <img class="section-four-photo" width="264" height="260" src="./img/men2.jpg" alt="men">
                 <div class="photo-color">
                     <h3 class="team-text">Tom Ford</h3>
                     <p class="team-prof">Frontend Developer</p>
@@ -196,7 +196,7 @@
                 </div>
                 </li>
                 <li class="style photo-team">
-                    <img width="264" height="260" src="./img/photo-6.jpg" alt="women">
+                    <img class="section-four-photo" width="264" height="260" src="./img/photo-6.jpg" alt="women">
                 <div class="photo-color">
                     <h3 class="team-text">Camila Garcia</h3>
                     <p class="team-prof">Marketing</p>
@@ -234,7 +234,7 @@
                 </div>
                 </li>
                 <li class="style photo-team">
-                    <img width="264" height="260" src="./img/men3.jpg" alt="men">
+                    <img class="section-four-photo" width="264" height="260" src="./img/men3.jpg" alt="men">
                 <div class="photo-color">
                     <h3 class="team-text">Daniel Wilson</h3>
                     <p class="team-prof">UI Designer</p>
@@ -303,10 +303,40 @@
     </main>
 
     <footer class="logo">
-    <div class="container">
+    <div class="container footer">
         <a class="footer-logo link" href="/"><span class="footer-web">WEB</span>STUDIO</a> 
         <p class="footer-info">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <div class="footer-soc-media">
+        <h4 class="social" >Social media</h4>
+        <ul class="footer-soc-item">
+            <li class="footer-link">
+                <a class="footer-soc-link" href="#"></a>
+                <svg class="footer-soc-list">
+                    <use href="./img/icons-team.svg#icon-instagram"></use>
+                </svg>
+            </li>
+            <li class="footer-link">
+                <a class="footer-soc-link" href="#"></a>
+                <svg class="footer-soc-list">
+                    <use href="./img/icons-team.svg#icon-twitter"></use>
+                </svg>
+            </li>
+            <li class="footer-link">
+                <a class="footer-soc-link" href="#"></a>
+                <svg class="footer-soc-list">
+                    <use href="./img/icons-team.svg#icon-facebook"></use>   
+                </svg>
+            </li>
+            <li class="footer-link">
+                <a class="footer-soc-link" href="#"></a>
+                <svg class="footer-soc-list">
+                    <use href="./img/icons-team.svg#icon-linkedin"></use>
+                </svg>
+            </li>
+        </ul>
+    </div>
     </div>        
     </footer>
+
 </body>
 </html>
