--- a/index.html
+++ b/index.html
@@ -304,8 +304,10 @@
 
     <footer class="logo">
     <div class="container footer">
+        <div>
         <a class="footer-logo link" href="/"><span class="footer-web">WEB</span>STUDIO</a> 
         <p class="footer-info">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
         <div class="footer-soc-media">
         <h4 class="social" >Social media</h4>
         <ul class="footer-soc-item">
