--- a/index.html
+++ b/index.html
@@ -312,28 +312,32 @@
         <h4 class="social" >Social media</h4>
         <ul class="footer-soc-item">
             <li class="footer-link">
-                <a class="footer-soc-link" href="#"></a>
+                <a class="footer-soc-link" href="#">
                 <svg class="footer-soc-list">
                     <use href="./img/icons-team.svg#icon-instagram"></use>
                 </svg>
+            </a>
             </li>
             <li class="footer-link">
-                <a class="footer-soc-link" href="#"></a>
+                <a class="footer-soc-link" href="#">
                 <svg class="footer-soc-list">
                     <use href="./img/icons-team.svg#icon-twitter"></use>
                 </svg>
+            </a>
             </li>
             <li class="footer-link">
-                <a class="footer-soc-link" href="#"></a>
+                <a class="footer-soc-link" href="#">
                 <svg class="footer-soc-list">
                     <use href="./img/icons-team.svg#icon-facebook"></use>   
                 </svg>
+                </a>
             </li>
             <li class="footer-link">
-                <a class="footer-soc-link" href="#"></a>
+                <a class="footer-soc-link" href="#">
                 <svg class="footer-soc-list">
                     <use href="./img/icons-team.svg#icon-linkedin"></use>
                 </svg>
+                </a>
             </li>
         </ul>
         </div> 
