--- a/index.html
+++ b/index.html
@@ -281,7 +281,9 @@
             <h2 class="customers-text">Customers</h2>
             <ul class="customers-list">
                 <li class="customers-item">
-                    <svg></svg>
+                    <svg>
+                        
+                    </svg>
                 </li>
                 <li>
                     <svg></svg>
