--- a/index.html
+++ b/index.html
@@ -281,24 +281,36 @@
             <h2 class="customers-text">Customers</h2>
             <ul class="customers-list">
                 <li class="customers-item">
-                    <svg>
-                        
+                    <a class="customers-color" href="#">
+                    <svg class="customers-link">
+                        <use href="./img/customers-logo.svg#icon-logo-one"></use>
+                    </svg>
+                </a>
+                </li>
+                <li class="customers-item">
+                    <svg class="customers-link">
+                        <use href="./img/customers-logo.svg#icon-logo-two"></use>
+                   </svg>
+                </li>
+                <li class="customers-item">
+                    <svg class="customers-link">
+                        <use href="img/./customers-logo.svg#icon-logo-three"></use>
                     </svg>
                 </li>
-                <li>
-                    <svg></svg>
+                <li class="customers-item">
+                    <svg class="customers-link">
+                        <use href="./img/customers-logo.svg#icon-logo-four"></use>
+                    </svg>
                 </li>
-                <li>
-                    <svg></svg>
+                <li class="customers-item">
+                    <svg class="customers-link">
+                        <use href="img/./customers-logo.svg#icon-logo-five"></use>
+                    </svg>
                 </li>
-                <li>
-                    <svg></svg>
-                </li>
-                <li>
-                    <svg></svg>
-                </li>
-                <li>
-                    <svg></svg>
+                <li class="customers-item">
+                    <svg class="customers-link">
+                        <use href="img/customers-logo.svg#icon-logo-six"></use>
+                    </svg>
                 </li>
             </ul>
         </section>
