--- a/portfolio.html
+++ b/portfolio.html
@@ -148,9 +148,44 @@
         </section>       
     </main>
     <footer class="logo">
-        <div class="container">
+        <div class="container footer">
+            <div>
         <a class="footer-logo link" href="/"><span class="footer-web">WEB</span>STUDIO</a> 
         <p class="footer-info">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
+           </div>
+        <div class="footer-soc-media">
+            <h4 class="social" >Social media</h4>
+            <ul class="footer-soc-item">
+                <li class="footer-link">
+                    <a class="footer-soc-link" href="#">
+                    <svg class="footer-soc-list">
+                        <use href="./img/icons-team.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+                </li>
+                <li class="footer-link">
+                    <a class="footer-soc-link" href="#">
+                    <svg class="footer-soc-list">
+                        <use href="./img/icons-team.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+                </li>
+                <li class="footer-link">
+                    <a class="footer-soc-link" href="#">
+                    <svg class="footer-soc-list">
+                        <use href="./img/icons-team.svg#icon-facebook"></use>   
+                    </svg>
+                    </a>
+                </li>
+                <li class="footer-link">
+                    <a class="footer-soc-link" href="#">
+                    <svg class="footer-soc-list">
+                        <use href="./img/icons-team.svg#icon-linkedin"></use>
+                    </svg>
+                    </a>
+                </li>
+            </ul>
+            </div> 
+        </div>    
     </footer>
 </body>
