--- a/portfolio.html
+++ b/portfolio.html
@@ -63,82 +63,82 @@
         </ul>
             <ul class="portfolio-photo">
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/bankingappinterfaceconcept.jpg" alt="banking app interfaceconcept">
                     <div class="portfolio-text">
-                    <h2 class="discription">Banking App Interface Concept</h3>
+                    <h2 class="discription">Banking App Interface Concept</h2>
                     <p class="discription-text">App</p>
                     </div>
                     </a>
                 </li>
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/cashlesspayment.jpg" alt="cashless payment">
                     <div class="portfolio-text">
-                    <h2 class="discription">Cashless Payment</h3>
+                    <h2 class="discription">Cashless Payment</h2>
                     <p class="discription-text">Marketing</p>
                     </div>
                     </a>
                 </li>
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/meditationapp.jpg" alt="meditation app">
                     <div class="portfolio-text">
-                    <h2 class="discription">Meditaion App</h3>
+                    <h2 class="discription">Meditaion App</h2>
                     <p class="discription-text">App</p>
                     </div>
                     </a>
                 </li>
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/taxiservice.jpg" alt="taxi service">
                     <div class="portfolio-text">
-                    <h2 class="discription">Taxi Service</h3>
+                    <h2 class="discription">Taxi Service</h2>
                     <p class="discription-text">Marketing</p>
                     </a>
                     </div>
                 </li>
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/screenillustration.jpg" alt="screen illustration">
                     <div class="portfolio-text">
-                    <h2 class="discription">Screen Illustrations</h3>
+                    <h2 class="discription">Screen Illustrations</h2>
                     <p class="discription-text">Design</p>
                     </div>
                     </a>
                 </li>
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/onlinecourses.jpg" alt="online courses">
                     <div class="portfolio-text">
-                    <h2 class="discription">Online Courses</h3>
+                    <h2 class="discription">Online Courses</h2>
                     <p class="discription-text">Marketing</p>
                     </div>
                     </a>
                 </li>
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/instagramstoriesconcept.jpg" alt="instagram stories concept">
                     <div class="portfolio-text">
-                    <h2 class="discription">Instagram stories concept</h3>
+                    <h2 class="discription">Instagram stories concept</h2>
                     <p class="discription-text">Design</p>
                     </div>
                     </a>
                 </li>
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/organicfood.jpg" alt="organic food">
                     <div class="portfolio-text">
-                    <h2 class="discription">Organic Food</h3>
+                    <h2 class="discription">Organic Food</h2>
                     <p class="discription-text">Web Site</p>
                     </div>
                     </a>
                 </li>
                 <li class="style section-portfolio-photo">
-                    <a class="link" href="">
+                    <a class="portfolio-link link" href="">
                     <img class="portfolio-img" width="360" height="260" src="./img/portfolio/freshcoffe.jpg" alt="fresh coffe">
                     <div class="portfolio-text">
-                    <h2 class="discription">Fresh Coffee</h3>
+                    <h2 class="discription">Fresh Coffee</h2>
                     <p class="discription-text">Web Site</p>
                     </div>
                     </a>
