--- a/index.html
+++ b/index.html
@@ -48,48 +48,40 @@
             <div class="container">
             <ul class="section-two">
                 <li class="about style">
-                    <ul class="section-img">
-                        <li class="section-item">
+                    <div class="section-img"> 
                                 <svg class="section-two-item">
                                     <use href="./img/section-2.svg#icon-antenna"></use>
                                 </svg>
-                        </li>
-                    </ul>   
+                    </div>   
                     <h3 class="text-top">Strategy</h3>
                     <p class="text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li class="about style">
-                    <ul class="section-img">
-                        <li class="section-item">
+                    <div class="section-img">
                                 <svg class="section-two-item">
                                     <use href="./img/section-2.svg#icon-clock"></use>
                                 </svg>
-                        </li>
-                    </ul>   
+                    </div>   
                     <h3 class="text-top">Punctuality</h3>
                     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="about style">
-                    <ul class="section-img">
-                        <li class="section-item">
+                    <div class="section-img">
                                 <svg class="section-two-item">
                                     <use href="./img/section-2.svg#icon-diagram"></use>
                                 </svg>
-                        </li>
-                    </ul>   
+                    </div>   
                     <h3 class="text-top">Diligence</h3>
                     <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
 
                 </li>
                 <li class="about style">
-                    <ul class="section-img">
-                        <li class="section-item">
+                    <div class="section-img">
                                 <svg class="section-two-item">
                                     <use href="./img/section-2.svg#icon-astronaut"></use>
                                 </svg>
-                        </li>
-                    </ul>   
+                    </div>   
                     <h3 class="text-top">Technologies</h3>
                     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -288,29 +280,39 @@
                 </a>
                 </li>
                 <li class="customers-item">
+                    <a class="customers-color" href="#">
                     <svg class="customers-link">
                         <use href="./img/customers-logo.svg#icon-logo-two"></use>
                    </svg>
+                </a>
                 </li>
                 <li class="customers-item">
+                    <a class="customers-color" href="#">
                     <svg class="customers-link">
                         <use href="img/./customers-logo.svg#icon-logo-three"></use>
                     </svg>
+                </a>
                 </li>
                 <li class="customers-item">
+                    <a class="customers-color" href="#">
                     <svg class="customers-link">
                         <use href="./img/customers-logo.svg#icon-logo-four"></use>
                     </svg>
+                </a>
                 </li>
                 <li class="customers-item">
+                    <a class="customers-color" href="#">
                     <svg class="customers-link">
                         <use href="img/./customers-logo.svg#icon-logo-five"></use>
                     </svg>
+                </a>
                 </li>
                 <li class="customers-item">
+                    <a class="customers-color" href="#">
                     <svg class="customers-link">
                         <use href="img/customers-logo.svg#icon-logo-six"></use>
                     </svg>
+                </a>
                 </li>
             </ul>
         </section>
@@ -323,7 +325,7 @@
         <p class="footer-info">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
         <div class="footer-soc-media">
-        <h4 class="social" >Social media</h4>
+        <p class="social">Social media</p>
         <ul class="footer-soc-item">
             <li class="footer-link">
                 <a class="footer-soc-link" href="#">
